--- a/vitaes-webapp/package.json
+++ b/vitaes-webapp/package.json
@@ -20,6 +20,7 @@
     "react-autosize-textarea": "",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.4.2",
+    "react-pdf": "^4.0.5",
     "react-router-dom": "^5.0.0",
     "react-scripts": "1.1.5",
     "react-sortable-hoc": "",
